feat: add is_mine field in job details
